fix roteiaMensagem